<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>thinkjoy-web</artifactId>
        <groupId>com.thinkjoy</groupId>
        <version>1.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>thinkjoy-web-rpc-service</artifactId>
    <packaging>jar</packaging>
    <version>${project.jar.web.version}</version>


    <name>thinkjoy-web-rpc-service</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.thinkjoy</groupId>
            <artifactId>thinkjoy-web-rpc-api</artifactId>
        </dependency>
    </dependencies>


    <!--<profiles>-->
        <!--<profile>-->
            <!--<id>dev</id>-->
            <!--<properties>-->
                <!--<env>dev</env>-->
            <!--</properties>-->
            <!--<activation>-->
                <!--<activeByDefault>true</activeByDefault>-->
            <!--</activation>-->
        <!--</profile>-->
        <!--<profile>-->
            <!--<id>test</id>-->
            <!--<properties>-->
                <!--<env>test</env>-->
            <!--</properties>-->
            <!--&lt;!&ndash;<activation>&ndash;&gt;-->
                <!--&lt;!&ndash;<activeByDefault>true</activeByDefault>&ndash;&gt;-->
            <!--&lt;!&ndash;</activation>&ndash;&gt;-->
        <!--</profile>-->
        <!--<profile>-->
            <!--<id>prod</id>-->
            <!--<properties>-->
                <!--<env>prod</env>-->
            <!--</properties>-->

        <!--</profile>-->
    <!--</profiles>-->

    <build>
        <finalName>thinkjoy-web-rpc-service</finalName>
        <!--<filters>-->
            <!--<filter>src/main/resources/profiles/${env}.properties</filter>-->
        <!--</filters>-->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                    <!--<include>**/*.properties</include>-->
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptor>src/main/assembly/assembly.xml</descriptor>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-compiler-javac</artifactId>
                        <version>1.8.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <skip>true</skip>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>-server -XX:PermSize=1024m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
